tests/cases/errors/sema/redefine_function.hc
//@ error: redefinition of function `F`
U0 F() {}
U0 F() {}

U0 Main() {}
